--- a/welcome.html
+++ b/welcome.html
@@ -17,7 +17,7 @@
 --primary:#f4b400;
 --bg:#fffcf0;
 --glass:rgba(255,255,255,.95);
---shadow:0 10px 35px rgba(0,0,0,.06);
+--shadow:0 15px 45px rgba(0,0,0,.08);
 }
 
 *{
@@ -36,17 +36,20 @@ min-height:100vh;
 /* TOPBAR */
 .topbar{
 display:flex;
-justify-content:space-between;
+justify-content:center;
 align-items:center;
-padding:14px 24px;
+padding:16px 20px;
 background:var(--glass);
 position:sticky;
 top:0;
 z-index:1000;
-border-bottom:1px solid rgba(244,180,0,.2);
+border-bottom:2px solid rgba(244,180,0,.15);
+position:relative;
 }
 
 .menu-btn{
+position:absolute;
+left:20px;
 width:42px;
 height:42px;
 border-radius:12px;
@@ -61,17 +64,22 @@ transition:.2s;
 background:#fafafa;
 }
 
+.brand{
+font-size:20px;
+font-weight:800;
+}
+
 /* DROPDOWN */
 .dropdown{
 display:none;
 position:absolute;
 top:65px;
-left:24px;
+left:20px;
 background:white;
-width:280px;
-border-radius:16px;
-box-shadow:0 18px 45px rgba(0,0,0,.12);
-padding:14px;
+width:290px;
+border-radius:18px;
+box-shadow:0 20px 50px rgba(0,0,0,.15);
+padding:15px;
 max-height:450px;
 overflow-y:auto;
 }
@@ -82,7 +90,7 @@ display:block;
 
 .dropdown a{
 display:block;
-padding:10px 12px;
+padding:12px;
 text-decoration:none;
 color:#444;
 font-weight:600;
@@ -99,7 +107,7 @@ color:var(--primary);
 .section-title{
 font-size:11px;
 color:#999;
-margin:10px 0 6px;
+margin:12px 0 6px;
 letter-spacing:.5px;
 }
 
@@ -107,56 +115,54 @@ letter-spacing:.5px;
 .main{
 max-width:1200px;
 margin:auto;
-padding:60px 20px 50px;
+padding:60px 20px 60px;
 text-align:center;
 }
 
 #welcomeText{
-font-size:34px;
+font-size:38px;
 font-weight:800;
-margin-bottom:8px;
+margin-bottom:10px;
 }
 
 .subtitle{
 color:#777;
-margin-bottom:40px;
-font-size:15px;
+margin-bottom:45px;
+font-size:16px;
 }
 
-/* CARDS GRID */
+/* CARDS */
 .cards{
 display:grid;
 grid-template-columns:repeat(3,1fr);
-gap:24px;
-width:100%;
+gap:28px;
 }
 
 .card{
 background:white;
-padding:26px;
-border-radius:22px;
+padding:35px;
+border-radius:24px;
 box-shadow:var(--shadow);
 cursor:pointer;
-transition:.25s ease;
-border:2px solid transparent;
-text-align:center;
+transition:.3s ease;
+border:3px solid rgba(244,180,0,.15);
 }
 
 .card:hover{
-transform:translateY(-6px);
+transform:translateY(-8px);
+box-shadow:0 20px 60px rgba(244,180,0,.25);
 border-color:var(--primary);
 }
 
 .card h3{
-margin-bottom:10px;
-font-size:16px;
+font-size:20px;
+margin-bottom:12px;
 font-weight:700;
 }
 
 .card p{
-font-size:13px;
-color:#777;
-line-height:1.5;
+font-size:15px;
+color:#666;
 }
 
 /* Tablet */
@@ -164,27 +170,34 @@ line-height:1.5;
 .cards{
 grid-template-columns:repeat(2,1fr);
 }
+#welcomeText{
+font-size:30px;
+}
 }
 
 /* Mobile */
 @media(max-width:600px){
 .cards{
 grid-template-columns:1fr;
+gap:20px;
+}
+.card{
+padding:25px;
 }
 #welcomeText{
 font-size:24px;
 }
-.card{
-padding:20px;
+.subtitle{
+font-size:14px;
 }
 }
 
-/* Paired hive style */
+/* Paired Hive */
 .hive-item{
 display:flex;
 justify-content:space-between;
 align-items:center;
-margin-bottom:8px;
+margin-bottom:10px;
 font-size:14px;
 }
 .hive-item span{
@@ -221,48 +234,48 @@ cursor:pointer;
 
 </div>
 
-<h2>
+<div class="brand">
 <span style="color:black;">Kanasu </span>
 <span style="color:#f4b400;">Bee House</span>
-</h2>
+</div>
 
 </div>
 
 <div class="main">
 
 <h1 id="welcomeText">Loading...</h1>
-<p class="subtitle">Ready to monitor your hive health?</p>
+<p class="subtitle">Let’s take care of your hives today.</p>
 
 <div class="cards">
 
 <div class="card" onclick="openDemo()">
 <h3>📊 Demo Dashboard</h3>
-<p>Explore simulated analytics</p>
+<p>Explore real-time simulated hive analytics.</p>
 </div>
 
 <div class="card" onclick="pairHive()">
 <h3>➕ Add New Hive</h3>
-<p>Connect to registered hive</p>
+<p>Connect your registered hive using Hive ID and PIN.</p>
 </div>
 
 <div class="card" onclick="location.href='calculator.html'">
 <h3>🍯 Honey Calculator</h3>
-<p>Estimate honey production</p>
+<p>Estimate honey production and yield.</p>
 </div>
 
 <div class="card" onclick="location.href='videos.html'">
 <h3>🎓 Learning Centre</h3>
-<p>Educational resources</p>
+<p>Educational resources and training materials.</p>
 </div>
 
 <div class="card" onclick="location.href='chatbot.html'">
 <h3>🤖 Kanasu Chatbot</h3>
-<p>AI hive assistant</p>
+<p>Your AI-powered hive assistant.</p>
 </div>
 
 <div class="card" onclick="location.href='image-disease.html'">
 <h3>🐝 Bee Scan AI</h3>
-<p>Disease detection tool</p>
+<p>Sound & image based disease detection.</p>
 </div>
 
 </div>
@@ -303,7 +316,7 @@ let hiveId=prompt("Enter Hive ID");
 if(!hiveId) return;
 let pin=prompt("Enter Hive PIN");
 if(!pin) return;
-let customName=prompt("Enter Custom Hive Name");
+let customName=prompt("Enter Custom Hive Name (e.g North East Hive)");
 if(!customName) return;
 
 firebase.database().ref("hives/"+hiveId).once("value").then(snapshot=>{
@@ -328,7 +341,7 @@ pairedHives.forEach((h,index)=>{
 let div=document.createElement("div");
 div.className="hive-item";
 let name=document.createElement("span");
-name.innerText="🐝 "+h.name;
+name.innerText=" "+h.name;
 name.onclick=()=>{
 localStorage.setItem("activeHiveId",h.id);
 localStorage.setItem("activeHiveName",h.name);
